--- a/example/gitea-custom/files/body_inner_pre.tmpl
+++ b/example/gitea-custom/files/body_inner_pre.tmpl
@@ -1,10 +1,10 @@
 {{if not .IsSigned}}
   <div class="ui positive message" style="margin: 1em;">
-    Please write an email to s dot adaszewski at gmail dot com
-    if you would like to get an account. User accounts are only
-    allowed to report issues and/or make forks in order to
-    generate pull requests. This is a purpose-specific Git hosting
-    for <a href="https://adared.ch" target="_blank">ADARED</a>
+    IF YOU WOULD LIKE TO GET AN ACCOUNT, please write an
+    email to s dot adaszewski at gmail dot com. User accounts
+    are only meant to report issues and/or generate pull requests.
+    This is a purpose-specific Git hosting for
+    <a href="https://adared.ch" target="_blank">ADARED</a>
     projects.
   </div>
 {{end}}
