chmod /focker to 0600

--- a/example/gitea-custom/files/body_inner_pre.tmpl
+++ b/example/gitea-custom/files/body_inner_pre.tmpl
@@ -5,6 +5,6 @@
     are only meant to report issues and/or generate pull requests.
     This is a purpose-specific Git hosting for
     <a href="https://adared.ch" target="_blank">ADARED</a>
-    projects.
+    projects. Thank you for your understanding!
   </div>
 {{end}}
