Final touches for Gitea.

--- a/example/gitea-custom/files/body_inner_pre.tmpl
+++ b/example/gitea-custom/files/body_inner_pre.tmpl
@@ -2,7 +2,7 @@
   <div class="ui positive message" style="margin: 1em;">
     IF YOU WOULD LIKE TO GET AN ACCOUNT, please write an
     email to s dot adaszewski at gmail dot com. User accounts
-    are only meant to report issues and/or generate pull requests.
+    are meant only to report issues and/or generate pull requests.
     This is a purpose-specific Git hosting for
     <a href="https://adared.ch" target="_blank">ADARED</a>
     projects. Thank you for your understanding!
